# aero-stream

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.js  README.md  Taskfile.yml  deploy.sh  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.ai/: context.md  plan.md  rules.md
.ai/tasks/: task-01.md  task-02.md  task-03.md  task-04.md  task-05.md  task-06.md  task-07.md  task-08.md  task-09.md  template.md
.doc/00 - general/: summary.md
.doc/01 - architecture/: diagrams.md
.doc/02 - use cases/: flujos.md
.doc/03 - services/: endpoints.md  scaffolding.md
apps/aero-stream-engine/: Taskfile.yml  package.json
apps/aero-stream-engine/src/: index.ts
apps/aero-stream-pilot/: Taskfile.yml  next.config.js  package.json  tsconfig.json  wrangler.jsonc
apps/aero-stream-pilot-example/: Taskfile.yml  package.json  wrangler.jsonc
apps/aero-stream-pilot-example/src/app/: layout.tsx  page.tsx
apps/aero-stream-pilot-example/src/components/: PilotExample.tsx  StepCard.tsx  index.ts
apps/aero-stream-pilot/lib/aero-stream-pilot-core/: Cargo.toml  Taskfile.yml
apps/aero-stream-pilot/lib/aero-stream-pilot-core/src/: lib.rs
apps/aero-stream-pilot/src/: index.js  index.ts
apps/aero-stream-pilot/src/core/: index.ts  model.ts
apps/aero-stream-pilot/test/: AeroStreamPilot.test.ts
apps/aero-stream-tower/: README.md  Taskfile.yml  eslint.config.mjs  package.json  tsconfig.json  wrangler.jsonc
apps/aero-stream-tower/migrations/: 0001_workflow_steps.sql  0002_workflows.sql
apps/aero-stream-tower/src/: constants.ts  index.ts
(+42 files in other folders)
