[package]
name = "aero-stream-pilot-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WebAssembly Interop
wasm-bindgen = "0.2.117"
js-sys = { version = "0.3.94", features = ["futures"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Cryptography
crypto_box = { version = "0.9.1", features = ["serde"] }
crypto_secretbox = "0.1.1" 
xsalsa20poly1305 = "0.9.1"

# Encoding
base64 = "0.22.1"

# Randomness
rand_core = "0.10.0"
getrandom = { version = "0.2", features = ["js"] }
